Fix icon alignment

--- a/_sass/ddc-day.scss
+++ b/_sass/ddc-day.scss
@@ -128,6 +128,7 @@ a small {
 .fas {
   font-family: FontAwesome;
   font-size: 1.5em;
+  vertical-align: bottom;
 }
 
 section a {
